--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "dev": "tsx watch src/index.ts"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
