--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "build": "prisma generate --no-engine && tsc",
+    "start": "node dist/index.js"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
