--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "prisma generate --no-engine && tsc",
+    "build": "prisma generate --no-engine && tsc && next build",
     "start": "node dist/index.js"
   },
   "keywords": [],
