--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "prisma generate && tsc && next build",
-    "start": "node dist/index.js"
+    "build": "prisma generate --no-engine && tsc && next build",
+    "start": "next build"
   },
   "keywords": [],
   "author": "",
