--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,11 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "src/index.ts",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "src/index.ts"
-      }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "buildCommand": "npm run build"
+    }
+  ],
+  "routes": [{ "src": "/(.*)", "dest": "/dist/index.js" }]
+}
