--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "gas-price-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "prisma generate --no-engine && tsc",
-    "start": "node dist/index.js"
-  },
+    "build": "rimraf dist && prisma generate --no-engine && tsc",
+    "start": "node dist/index.js",
+    "test": "jest --watch"
+  }
+  ,
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -27,6 +29,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
     "jest": "^29.7.0",
+    "rimraf": "^6.0.1",
     "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
