feat: atualizando run

--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,25 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.ts",
-      "use": "@vercel/node"
+      "src": "src/index.ts",
+      "use": "@vercel/node",
+      "config": {
+        "maxDuration": 10
+      }
     }
   ],
+  "build": {
+    "env": {
+      "PRISMA_GENERATE": "true"
+    },
+    "commands": [
+      "npx prisma generate"
+    ]
+  },
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/index.ts"
+      "dest": "src/index.ts"
     }
   ]
 }
