--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
+    "postinstall": "prisma generate",
     "build": "rimraf dist && prisma generate --no-engine && tsc",
     "start": "node dist/index.js",
     "test": "jest --watch"
