--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "rimraf dist && prisma generate --no-engine && tsc",
     "start": "node dist/index.js",
     "test": "jest --watch"
+  },
+  "engines": {
+    "node": ">=18"
   }
   ,
   "keywords": [],
